--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 
 <head>
-    <title>TO DO LIST простой планировщик списка дел</title>
+    <title>TO DO LIST online простой планировщик списка дел онлайн</title>
     <meta charset="UTF-8">
     <meta name="description" content="This to-do list will help you get things done and get things done / Этот список дел поможет вам составить и выполнить все запланированное">
-    <meta name="keywords" content="планировщик, список дел, to do list, план дел, дел">
+    <meta name="keywords" content="планировщик, список дел, to do list, план дел, дел, онлайн, online">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset/reset.css">
     <link rel="stylesheet" href="./css/fonts/fonts.css">
